tests/machine/x/c/right_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/right_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/right_join.c:83:52: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   83 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                    ^
/workspace/mochi/tests/machine/x/c/right_join.c:83:52: note: (near initialization for ‘(anonymous).customerName’)
/workspace/mochi/tests/machine/x/c/right_join.c:83:69: error: incompatible types when initializing type ‘int’ using type ‘ordersItem’
   83 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                                     ^
/workspace/mochi/tests/machine/x/c/right_join.c:87:25: error: invalid initializer
   87 |       customersItem c = 0;
      |                         ^
/workspace/mochi/tests/machine/x/c/right_join.c:88:52: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   88 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                    ^
/workspace/mochi/tests/machine/x/c/right_join.c:88:52: note: (near initialization for ‘(anonymous).customerName’)
/workspace/mochi/tests/machine/x/c/right_join.c:88:69: error: incompatible types when initializing type ‘int’ using type ‘ordersItem’
   88 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                                     ^
/workspace/mochi/tests/machine/x/c/right_join.c:93:28: error: invalid initializer
   93 |   list_resultItem result = _t3;
      |                            ^~~
/workspace/mochi/tests/machine/x/c/right_join.c:101:32: error: request for member ‘id’ in something not a structure or union
  101 |       printf("%d ", entry.order.id);
      |                                ^
/workspace/mochi/tests/machine/x/c/right_join.c:103:33: error: request for member ‘total’ in something not a structure or union
  103 |       printf("%d\n", entry.order.total);
      |                                 ^

   1: #include <stdio.h>
